[gd_scene format=3 uid="uid://bn6bgp7htt2l5"]

[ext_resource type="Script" uid="uid://bqhqax471vyd4" path="res://Scenes/cauldron_ui.gd" id="1_ri8xj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e36e1"]
size = Vector2(60, 58)

[node name="CauldronUI" type="Control" unique_id=739318511]
z_index = 1
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -180.0
offset_right = -270.0
offset_bottom = -180.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
script = ExtResource("1_ri8xj")

[node name="ComponentChecker" type="Area2D" parent="." unique_id=1680700161]
z_index = 10
position = Vector2(75, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ComponentChecker" unique_id=1886527340]
shape = SubResource("RectangleShape2D_e36e1")

[node name="Control" type="Control" parent="." unique_id=1238576188]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control" unique_id=52226461]
layout_mode = 0
offset_left = -125.0
offset_top = -85.0
offset_right = -73.0
offset_bottom = 84.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect" unique_id=2115752344]
layout_mode = 0
offset_left = 2.0
offset_top = 17.0
offset_right = 50.0
offset_bottom = 166.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ColorRect/VBoxContainer" unique_id=2094466206]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/ColorRect/VBoxContainer" unique_id=1936057254]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/ColorRect/VBoxContainer" unique_id=109397198]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/ColorRect/VBoxContainer" unique_id=952434812]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/ColorRect/VBoxContainer" unique_id=1603132232]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/ColorRect/VBoxContainer" unique_id=485211817]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="Control/ColorRect" unique_id=1180958423]
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 47.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "potions"

[node name="ColorRect2" type="ColorRect" parent="Control" unique_id=2014947691]
layout_mode = 0
offset_left = -68.0
offset_top = -85.0
offset_right = 19.0
offset_bottom = 84.0
mouse_filter = 2

[node name="Label2" type="Label" parent="Control/ColorRect2" unique_id=959529505]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 18.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "components"

[node name="ColorRect3" type="ColorRect" parent="Control" unique_id=2086616534]
layout_mode = 0
offset_left = 44.0
offset_top = -28.0
offset_right = 106.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.24705882, 1, 0.25490198, 1)

[node name="Label3" type="Label" parent="Control/ColorRect3" unique_id=1241695986]
layout_mode = 0
offset_left = 7.0
offset_top = -20.0
offset_right = 55.0
offset_bottom = -4.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "cauldron"

[node name="Button" type="Button" parent="Control/ColorRect3" unique_id=1991843894]
layout_mode = 0
offset_left = 5.0
offset_top = 63.0
offset_right = 57.0
offset_bottom = 94.0
text = "brew!"

[node name="Control2" type="Control" parent="Control" unique_id=394238169]
anchors_preset = 0
offset_left = -65.0
offset_top = -66.0
offset_right = -25.0
offset_bottom = -26.0
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=601199690]
layer = 2

[connection signal="body_entered" from="ComponentChecker" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="ComponentChecker" to="." method="_on_component_checker_body_exited"]
[connection signal="pressed" from="Control/ColorRect3/Button" to="." method="_on_button_pressed"]
